<resources>
    <string name="cancel_upload">Cancel</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="info" translatable="false">Info</string>
    <string name="uploading" translatable="false">Uploaded [[UPLOADED_FILES]] of [[TOTAL_FILES]] at [[UPLOAD_RATE]] - [[PROGRESS]]</string>
    <string name="upload_success" translatable="false">Upload completed successfully in [[ELAPSED_TIME]]</string>
    <string name="upload_error" translatable="false">Error while uploading</string>
    <string name="upload_cancelled" translatable="false">Upload has been cancelled</string>
    <string name="multipart_upload" translatable="false">Multipart Upload</string>
    <string name="binary_upload">Binary Upload</string>
    <string name="new_binary_upload">New Binary Upload</string>
    <string name="ftp_upload">FTP Upload</string>
    <string name="new_ftp_upload">New FTP Upload</string>
    <string name="pcapdroid_app_name" translatable="false">PCAPdroid</string>
    <string name="default_collector_ip" translatable="false">127.0.0.1</string>
    <string name="default_collector_port" translatable="false">1234</string>
    <string name="ip_and_port" translatable="false">%1$s:%2$d</string>
    <string name="app_and_proto" translatable="false">%1$s (%2$s)</string>
    <string name="sni" translatable="false">SNI</string>
    <string name="url" translatable="false">URL</string>
    <string name="whois_lookup" translatable="false">WHOIS</string>
    <string name="system_id" translatable="false">System ID</string>
    <string name="app_license" translatable="false">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT
        ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License or later</a> for
        more details</string>
    <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br />\n\n
        - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>GPL-3.0</a>\n\n
        - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
        - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
        - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
        - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
        </string>
    <string name="connections_csv_fields" translatable="false">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
    <string name="collector_info">UDP collector: %1$s:%2$d</string>
    <string name="http_server_status">HTTP server: http://%1$s:%2$d</string>
    <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
    <string name="query">Query</string>
    <string name="host">Host</string>
    <string name="app_filter">Target app</string>
    <string name="ready">Ready</string>
    <string name="about">About</string>
    <string name="status">Status</string>
    <string name="connections_view">Connections</string>
    <string name="no_connections">No connections</string>
    <string name="connection_details">Connection details</string>
    <string name="app">App</string>
    <string name="protocol">Protocol</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="bytes">Bytes</string>
    <string name="packets">Packets</string>
    <string name="duration">Duration</string>
    <string name="http_server">HTTP server</string>
    <string name="udp_exporter">UDP exporter</string>
    <string name="no_dump">None</string>
    <string name="no_dump_info">PCAP will not be dumped</string>
    <string name="http_server_info">Start an HTTP server for the PCAP download</string>
    <string name="udp_exporter_info">Sends the PCAP to a remote UDP receiver</string>
    <string name="http_server_port">HTTP server port</string>
    <string name="receiver_ip_address">Collector IP address</string>
    <string name="receiver_port">Collector port</string>
    <string name="dump_mode">Dump mode</string>
    <string name="user_guide">User guide</string>
    <string name="open_telegram_group">Telegram group</string>
    <string name="source_code">Source code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="vpn_setup_failed">Could not set up the VPN</string>
    <string name="app_not_found">Could not find the "%1$s" app</string>
    <string name="stats">Stats</string>
    <string name="active_connections">Active connections</string>
    <string name="dropped_connections">Dropped connections</string>
    <string name="tot_connections">Total connections</string>
    <string name="open_sockets">Open sockets</string>
    <string name="max_file_descriptor">Max FD</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="bytes_rcvd">Bytes received</string>
    <string name="packets_sent">Packets sent</string>
    <string name="packets_rcvd">Packets received</string>
    <string name="dns_queries">DNS queries</string>
    <string name="search_apps">Search apps</string>
    <string name="no_apps">No apps</string>
    <string name="dns_server">DNS server</string>
    <string name="apps">Apps</string>
    <string name="pcap_file">PCAP file</string>
    <string name="pcap_file_info">Create a PCAP file in device storage</string>
    <string name="cannot_write_file">Cannot write file</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="pcap_file_action">Traffic saved to the \"%1$s\" file (%2$s)</string>
    <string name="delete_error">Could not delete the file</string>
    <string name="capture_running">Capture running</string>
    <string name="notification_msg">%1$s captured, %2$s connections</string>
    <string name="proto_and_port">%1$s, %2$d</string>
    <string name="conn_status_open">Open</string>
    <string name="first_seen">First seen</string>
    <string name="last_seen">Last seen</string>
    <string name="conn_status_closed">Closed</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="save_to_file">Save to file</string>
    <string name="older_connections_notice">%1$d older connections not shown</string>
    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges</string>
    <string name="get_app">Get it:</string>
    <string name="tls_how_to">How to set up the TLS decryption</string>
    <string name="unknown_app">Unknown</string>
    <string name="ipv6">IPv6</string>
    <string name="enable_ipv6_summary">Allow IPv6 connections to the Internet. Only use this on networks with an IPv6 gateway</string>
    <string name="error">Error</string>
    <string name="conn_status_unreachable">Unreachable</string>
    <string name="other_prefs">Other</string>
    <string name="app_language">App language</string>
    <string name="lang_english">English</string>
    <string name="system_default">System</string>
    <string name="no_activity_file_selection">No app found to handle file selection</string>
    <string name="file_saved_with_name">File saved as \"%1$s\"</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="app_theme">Theme</string>
    <string name="socks5_proxy">SOCKS5</string>
    <string name="enable_socks5_proxy_summary">Redirect all the TCP connections to the specified SOCKS5 proxy</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_ip_address">Proxy IP address</string>
    <string name="proxy_port">Proxy port</string>
    <string name="root_capture">Capture as root</string>
    <string name="root_capture_summary">Allows PCAPdroid to run with other VPN apps</string>
    <string name="donate">Donate</string>
    <string name="root_log">Root log</string>
    <string name="request_plaintext">Request plaintext</string>
    <string name="search">Search…</string>
    <string name="app_val">App: %1$s</string>
    <string name="ip_address_val">IP address: %1$s</string>
    <string name="host_val">Host: %1$s</string>
    <string name="protocol_val">Protocol: %1$s</string>
    <string name="whitelist_action">Whitelist…</string>
    <string name="hide">Hide…</string>
    <string name="n_selected">%1$d selected</string>
    <string name="select_all">Select all</string>
    <string name="app_details">App details</string>
    <string name="package_name">Package name</string>
    <string name="uid">UID</string>
    <string name="app_name">Name</string>
    <string name="version">Version</string>
    <string name="target_sdk">Target SDK</string>
    <string name="installed_on">Installed on</string>
    <string name="last_update">Last update</string>
    <string name="permissions">Permissions</string>
    <string name="root_app_info">System daemons running with maximum privileges</string>
    <string name="netd_app_info">The system daemon performing the DNS resolutions</string>
    <string name="android_app_info">The Android system</string>
    <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined</string>
    <string name="packets_dropped">Packets dropped</string>
    <string name="capture_prefs">Capture</string>
    <string name="pcapdroid_trailer">PCAPdroid trailer</string>
    <string name="pcapdroid_trailer_summary">A trailer containing additional metadata (such as the app name) will be added to the dumped packets</string>
    <string name="trailer_how_to">How to display the trailer data in Wireshark</string>
    <string name="remove_ads">Remove ads</string>
    <string name="pending_transaction">Please complete your transaction to redeem this feature</string>
    <string name="ctrl_consent">An app wants to capture your device traffic.\nDeny it if you are not sure</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="ctrl_consent_title">PCAPdroid control request</string>
    <string name="ctrl_consent_denied">PCAPdroid: the control request was denied</string>
    <string name="ctrl_consent_allowed">PCAPdroid: the control request was allowed</string>
    <string name="capture_interface">Capture interface</string>
    <string name="internet">Internet</string>
    <string name="all_interfaces">All interfaces</string>
    <string name="capturing_from">Capturing packets from \"%1$s\"</string>
    <string name="edit_filter">Edit filter</string>
    <string name="edit_list">Edit list</string>
    <string name="hidden_connections_rules">Hidden connections rules</string>
    <string name="list_is_empty">The list is empty</string>
    <string name="malicious_connection_app">Malicious connection detected (%1$s)</string>
    <string name="show_only_malicious">Malicious connections</string>
    <string name="security">Security</string>
    <string name="decryption_no_filter_warn">Select a target app when decrypting TLS to avoid losing your connection to the Internet</string>
</resources>