<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_start"
        android:icon="@drawable/ic_play_arrow"
        android:orderInCategory="10"
        android:title="@string/start_button"
        android:visibility="gone"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stop"
        android:title="@string/stop_button"
        android:orderInCategory="10"
        android:icon="@drawable/ic_media_stop"
        android:visibility="gone"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="100"
        android:title="@string/title_activity_settings"
        android:visibility="gone"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
