<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.lag.maldefender.activities.MainActivity">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/app_filter_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="400dp"
            android:layout_marginRight="25dp"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="-16dp" />

        <TextView
            android:id="@+id/collector_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autoLink="web"
            android:drawablePadding="10dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_view"
            tools:text="Collector Info"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/interface_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collector_info"
            tools:text="Capturing from eth0..."
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/status_view"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:visibility="gone"
            tools:visibility="gone"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_bg"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/ready"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/quick_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_view">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/dump_mode_spinner"
                android:layout_width="0.1dp"
                android:visibility="gone"
                tools:visibility="gone"
                android:layout_height="0.1dp"
                android:prompt="@string/dump_mode"
                android:spinnerMode="dialog" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:visibility="gone"
                android:paddingEnd="0dp">

                <include
                    android:id="@+id/app_filter_text"
                    layout="@layout/quick_settings_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:visibility="gone"
                    tools:visibility="gone" />



                <TextView
                    android:id="@+id/app_filter_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_filter_text"
                    android:paddingHorizontal="10dp"
                    android:text="@string/decryption_no_filter_warn"
                    android:textColor="@color/warning"
                    android:textSize="14sp"
                    android:visibility="gone"
                    tools:visibility="gone" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>